--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ infested with hackers, so many stopped playing the game. To get better, you have
 
    
 
-<a href="page2.html" class="button">Next Page</a>
+<a href="" class="button">Next Page</a>
     
 </body> 
   </html>
